--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
 
 p {
+  font-family: 'Montserrat', sans-serif;
+}
+
+#blurb {
+  margin: 100px 20px 20px 20px;
+}
+
+nav {
   font-family: 'Montserrat', sans-serif;
 }
