--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
   height: 60px;
   line-height: 60px;
   background-color: #f5f5f5;
+  font-size: 10px;
 }
 
 p {
@@ -17,4 +15,9 @@ p {
 
 nav {
   font-family: 'Montserrat', sans-serif;
+}
+
+img {
+    width: 25%;
+    height: auto;
 }
