--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 #quote {
   text-align: center;
   font-style: italic;
-
 }
 
 .d-flex {
@@ -29,4 +28,5 @@ img {
   width: 70%;
   height: 50vh;
   background-color: white;
+  overflow: hidden;
 }
