--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .footer {
   height: 60px;
   line-height: 60px;
@@ -101,10 +102,27 @@ a.card:hover {
 }
 
 /* Designs */
-.carousel-inner {
-  position: relative;
-  height: 50vh;
-  width: auto;
+#designs-cards {
+  display: flex;
+  width: 90vw;
+  height: 70vh;
+  align-items: center;
+  justify-content: center;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+
+#cont-cards {
+  padding: 0;
+  margin: 0;
+  height: 230px;
+}
+
+#inner-card {
+  height: 200px;
+  width: 200px;
+  margin: 5px;
 }
 
 /* Projects */
