--- a/style.css
+++ b/style.css
@@ -102,6 +102,12 @@ a.card:hover {
 }
 
 /* Designs */
+
+#card-master {
+  flex-direction: column;
+}
+
+
 #designs-cards {
   display: flex;
   width: auto;
