update to extras page - markdown can now be SEEN

--- a/style.css
+++ b/style.css
@@ -175,6 +175,12 @@ a.card:hover {
 }
 
 /*Articles*/
+#textbox {
+  width: 70vw;
+  height: 80vh;
+  margin: 20px 20px 60px 20px;
+  overflow-y: scroll;
+}
 
 #side-nav {
   margin: 15px;
