--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
   }
 
   #cards-projects {
-    flex-direction: column;
+    flex-direction: column !important;
+    align-items: center !important;
+    margin-bottom: 50px !important;
   }
 
   span.sexy_line2 {
@@ -17,9 +19,33 @@
     font-size: 12px;
   }
 
-  iframe.iframe-text {
-    margin: 25px 0px 0px 0px;
-    width: auto;
+  #side-nav {
+    padding: 0 !important;
+    margin: 10px !important;
+  }
+
+  #textbox {
+    padding: 0 !important;
+    margin: 10px !important;
+  }
+
+  .list-group-item {
+    font-size: 10px !important;
+    overflow: hidden !important;
+  }
+
+  #carousel-designs {
+    width: 90vw !important;
+    margin-bottom: 50px !important;
+  }
+
+  img.card-img {
+    width: 60vw !important;
+    margin: 10px !important;
+  }
+
+  #card-master {
+    text-align: center !important;
   }
 
  }
@@ -46,7 +72,7 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   background-color: white;
 
 }
@@ -128,20 +154,20 @@ a.card:hover {
     box-shadow: inset 0 0 10px 2px gray;
 }
 
-
-#card-designs:hover {
-  background-image: radial-gradient(#ceffe2, #8dbc5a);
+a.btn {
+  background-color: #ededed !important;
+  border-color: #ededed !important;
+  color: #000000 !important;
 }
 
-#card-projects:hover {
-  background-image: radial-gradient(#ceffe2, #8dbc5a);
+a.btn:hover {
+  background-color: #d1d1d1 !important;
+  border-color: #d1d1d1 !important;
 }
 
-#card-other:hover {
-  background-image: radial-gradient(#ceffe2, #8dbc5a);
-}
 
 /* Designs */
+
 
 #card-master {
   flex-direction: column;
@@ -169,9 +195,15 @@ a.card:hover {
 /* Projects */
 #cards-projects {
   display: flex;
+  flex-direction: row;
   position: relative;
   justify-content: center;
   margin-top: 80px;
+  width: 80vw;
+}
+
+img.card-img-top {
+  filter: grayscale(70%);
 }
 
 /*Articles*/
@@ -191,21 +223,9 @@ a.card:hover {
 }
 
 .list-group-item {
-  font-size: 10px;
+  font-size: 12px;
 }
 
 #article-container {
   display: flex;
-}
-
-.iframe-text {
-   width: 70vw;
-   height: 75vh;
-   margin: 30px;
-   border: 1px lightgray solid;
-   border-radius: 5px;
-}
-
-.iframe {
-  display: block;
 }
